--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ python:
   - 3.5
   - 3.6
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements_test.txt
 script:
   - pytest
